--- a/src/index.html
+++ b/src/index.html
@@ -3,38 +3,38 @@
 <head>
   <meta charset="utf-8">
   <title>3PL TEK</title>
-  <base href=".">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Bootstrap CSS file  -->
   <link rel="icon" type="image/x-icon" href="assets/images/icon/favicon.png" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" type="text/css"/>
   <!-- Bootstrap CSS (in <head>) -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" type="text/css"/>
 
 
 
 
 
   <!-- Custom CSS  -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="icon" type="image/x-icon" href="assets/images/icon/favicon.png" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/fonts/css/all.min.css" />
-  <link rel="stylesheet" href="assets/css/dropify.min.css" />
-  <link rel="stylesheet" href="assets/css/select2.min.css" />
-  <link rel="stylesheet" href="assets/css/loader.css" />
-  <link rel='stylesheet' href='assets/plugin/remixicon/remixicon.css'>
-  <link rel='stylesheet' href='assets/plugin/sidebar/css/pro-layout.css'>
-  <link rel="stylesheet" href="assets/plugin/sidebar/css/style.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="assets/fonts/css/all.min.css" type="text/css"/>
+  <link rel="stylesheet" href="assets/css/dropify.min.css" type="text/css"/>
+  <link rel="stylesheet" href="assets/css/select2.min.css" type="text/css"/>
+  <link rel="stylesheet" href="assets/css/loader.css" type="text/css"/>
+  <link rel='stylesheet' href='assets/plugin/remixicon/remixicon.css' type="text/css"/>
+  <link rel='stylesheet' href='assets/plugin/sidebar/css/pro-layout.css' type="text/css" type="text/css"/>
+  <link rel="stylesheet" href="assets/plugin/sidebar/css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" type="text/css"/>
   <!-- Your CSS files -->
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" type="text/css">
 
   <!-- Your JavaScript files -->
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
